Add newspaper image and paper image to image folder.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ html {
   
   body {
     margin-bottom: 80px;
-    background-image: url("../images/paper.png");
+    background-image: url("../images/linedpaper.png");
   }
   
   .card a:not([href]):not([tabindex]).scrape-new {
@@ -47,7 +47,7 @@ html {
   
   .jumbotron .background-image {
     height: 100%;
-    background-image: url("../images/newspaper.jpg");
+    background-image: url("../images/news.jpeg");
     background-size: cover;
   }
   
