--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/materia/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link type="text/css" href="/public/assets/css/style.css">
 
 </head>
 <body>
